tooling/nargo_cli/tests/snapshots/execution_success/bit_shifts_u128/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 128
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "13233056226524634165": {
        "error_kind": "fmtstring",
        "length": 48,
        "item_types": [
          {
            "kind": "integer",
            "sign": "unsigned",
            "width": 128
          },
          {
            "kind": "integer",
            "sign": "unsigned",
            "width": 128
          },
          {
            "kind": "integer",
            "sign": "unsigned",
            "width": 128
          }
        ]
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) -340282366920938463463374607431768211455 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
