tooling/nargo_cli/tests/snapshots/execution_success/bit_shifts_u128/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u128):
    (no terminator instruction)
}
